# oumi-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
.planning/: .continue-here.md  PROJECT.md  ROADMAP.md  STATE.md
.planning/phases/01-registry-refactor/: 01-PLAN.md  01-SUMMARY.md
.planning/phases/02-server-bug-fixes/: 01-PLAN.md  02-01-SUMMARY.md
.planning/phases/03-guidance-content/: 01-PLAN.md  03-01-SUMMARY.md
.planning/phases/04-tests/: 01-PLAN.md  04-01-SUMMARY.md  04-VERIFICATION.md
docs/plans/: 2026-02-26-issue2-fixes-design.md  2026-02-26-issue2-implementation-plan.md
src/oumi_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/oumi_mcp_server/: __init__.py  __main__.py  config_service.py  constants.py  docs_service.py  job_service.py  models.py  server.py
src/oumi_mcp_server/prompts/: mle_prompt.py
tests/: test_client_cwd.py  test_cloud_file_checks.py  test_cloud_readiness.py  test_job_recovery_and_control.py  test_job_registry.py
